# expressionEvaluator

./: README.md
expressionEvaluator/: CMakeLists.txt  main.cpp
expressionEvaluator/evaluator/: evaluator.cpp  evaluator.h
expressionEvaluator/texts/: ERRORS.txt  deu.txt  eng.txt  esp.txt  fra.txt  ita.txt  ro.txt
expressionEvaluator/tipuri/: coada.cpp  coada.h  listeDouble.h  listeString.h  stivaDouble.cpp  stivaDouble.h  stivaString.cpp  stivaString.h
